--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link rel="stylesheet" href="https://bootswatch.com/3/slate/bootstrap.min.css">
-    <script src="app.js"></script>
 </head>
 <body>
 <div class="container mt-4">
@@ -17,7 +16,7 @@
     To <span>Read</span> List</h1>
     <div class="row">
       <div class="col-md-8  offset-md-2">
-        <form class="book-form">
+        <form id="book-form">
     
           <div class="form-group ">
             <label for="title">Title</label>
