--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <i class="fas fa-book-open"></i> 
     To <span>Read</span> List</h1>
     <div class="row">
-      <div class="col-md-8  offset-md-2">
+      <div class="col-md-8  offset-md-2 alert-container">
         <form id="book-form">
     
           <div class="form-group ">
